--- a/src/styles/settings/_settings.animations.sass
+++ b/src/styles/settings/_settings.animations.sass
@@ -1,17 +1,17 @@
 @keyframes waveAnimAf
   from
-    transform: scale(0.5,0.5)
+    transform: translateY(-50%) translateX(-50%) scale(0.5,0.5)
     opacity: 0
   to
-    transform: scale(1,1)
+    transform: translateY(-50%) translateX(-50%) scale(1,1)
     opacity: 1
 
 @keyframes waveAnimBf
   from
-    transform: scale(1,1)
+    transform: translateY(-50%) translateX(-50%) scale(1,1)
     opacity: 1
   to
-    transform: scale(1.5,1.5)
+    transform: translateY(-50%) translateX(-50%) scale(1.5,1.5)
     opacity: 0
 
 @keyframes fadeIn
